              (Lance Norskog, Noble Paul via ehatcher)
              
28.SOLR-1286: Fix the commit parameter always defaulting to "true" even if "false" is explicitly passed in.
              (Jay Hill, Noble Paul via ehatcher)
            
29.SOLR-1323: Reset XPathEntityProcessor's $hasMore/$nextUrl when fetching next URL (noble, ehatcher)
             

Documentation
----------------------
1. SOLR-1369: Add HSQLDB Jar to example-DIH, unzip database and update instructions.

Other
----------------------
1. SOLR-782:  Refactored SolrWriter to make it a concrete class and removed wrappers over SolrInputDocument.
              Refactored to load Evaluators lazily. Removed multiple document nodes in the configuration xml.
              Removed support for 'default' variables, they are automatically available as request parameters.
              (Noble Paul via shalin)

2. SOLR-964:  XPathEntityProcessor now ignores DTD validations
              (Fergus McMenemie, Noble Paul via shalin)

3. SOLR-1029: Standardize Evaluator parameter parsing and added helper functions for parsing all evaluator
              parameters in a standard way.
              (Noble Paul, shalin)

4. SOLR-1081: Change EventListener to be an interface so that components such as an EntityProcessor or a Transformer
              can act as an event listener.
              (Noble Paul, shalin)

5. SOLR-1027: Alias the 'dataimporter' namespace to a shorter name 'dih'.
              (Noble Paul via shalin)

6. SOLR-1084: Better error reporting when entity name is a reserved word and data-config.xml root node
              is not <dataConfig>.
              (Noble Paul via shalin)

7. SOLR-1087: Deprecate 'where' attribute in CachedSqlEntityProcessor in favor of cacheKey and cacheLookup.
              (Noble Paul via shalin)

8. SOLR-969:  Change the FULL_DUMP, DELTA_DUMP, FIND_DELTA constants in Context to String.
              Change Context.currentProcess() to return a string instead of an integer.